tests/NormalTests/paczka1/small_fuzzy/26038580.err
Error in line 2: i2GTxeGzCF8 A828 91,6
Error in line 3: BcAH A828 41,7
Error in line 8: da9Lk4Zwqo S890 48,3
Error in line 9: BcAH S393 24,8
Error in line 11: da9Lk4Zwqo S393 25,9
Error in line 4: i2GTxeGzCF8 S475 79,3
